# ArrayUtility

./: README.md  pyproject.toml
src/: README.md
src/array_utility/: README.md  __init__.py  ema.py
src/array_utility/ema/: README.md  __init__.py  bit.py  normal.py
src/array_utility/ring_buffer/: README.md  __init__.py  averaging.py  base.py  standard.py
src/array_utility/ring_buffer/averaging/: README.md  __init__.py  base.py  bit.py  normal.py
src/array_utility/ring_buffer/standard/: README.md  __init__.py  base.py  bit.py  normal.py
tests/: test_array_utility.py
