[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "array-utility"
version = "0.0.1"
authors = [
  { name = "Ryuto Yoshida" },
]
description = "Utilities for streaming numeric arrays, including ring buffers and exponential moving averages."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Typing :: Typed",
]
dependencies = [
    "numpy",
]

[project.urls]
Homepage = "https://github.com/ry-yoshida-private/ArrayUtility"
"Bug Tracker" = "https://github.com/ry-yoshida-private/ArrayUtility/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
array_utility = ["py.typed"]
